# pulse

./: Dockerfile  Makefile  README.md  docker-compose.yaml  init-db.sh  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yaml  check.yaml
pulse/: __init__.py  llm.py  main.py
pulse/config/: __init__.py
pulse/loaders/: __init__.py  confluence.py  slack.py
pulse/routers/: __init__.py  confluence.py  slack.py
pulse/services/: confluence.py  slack.py
pulse/vectorstore/: __init__.py
tests/load/: healthcheck.js
tests/unit/: test_slack.py  test_slack_routers.py
