[tool.poetry]
name = "pulse"
version = "0.1.0"
description = ""
authors = ["Fraser <fraserisbester@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.338"
faiss-cpu = "^1.7.4"
beautifulsoup4 = "^4.12.2"
openai = "^1.3.3"
tiktoken = "^0.5.1"
langchainhub = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
