[tool.poetry]
name = "pulse"
version = "0.2.0"
description = ""
authors = ["Fraser <fraserisbester@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.338"
tiktoken = "^0.5.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"
slack-sdk = "^3.24.0"
python-multipart = "^0.0.6"
pydantic = "^2.5.1"
openai = "^1.3.3"
redis = "^5.0.1"
langchainhub = "^0.1.14"
sqlalchemy = "^2.0.23"
pg8000 = "^1.30.3"
pgvector = "^0.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.8"
pytest-asyncio = "^0.23.1"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["I", "N", "ASYNC", "S", "BLE", "ARG", "TD", "ERA", "PL", "RUF"]
fix = true
line-length = 120
src = ["pulse"]
exclude = ["tests"]
